cap10/cap10-allow-egress-dns-visits.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cap10-allow-egress-dns-visits
spec:
  podSelector:
    matchLabels:
      app: visits
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
