cap10/cap10-allow-egress-visits-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cap10-allow-egress-visits-to-redis
spec:
  podSelector:
    matchLabels:
      app: visits
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
