cap10/cap10-allow-ingress-redis-from-visits.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cap10-allow-ingress-redis-from-visits
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: visits
