cap10/cap10-allow-ingress-to-visits.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cap10-allow-ingress-to-visits
spec:
  podSelector:
    matchLabels:
      app: visits
  policyTypes:
  - Ingress
  ingress: 
  - {}
