cap10/cap10-deny-all-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cap10-deny-all-traffic
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
